WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163633
REGRESSION (
r207480
): 3 Dromaeo tests failing
https://bugs.webkit.org/show_bug.cgi?id=163633
Summary
REGRESSION (r207480): 3 Dromaeo tests failing
Ryan Haddad
Reported
2016-10-18 17:10:29 PDT
https://build.webkit.org/builders/Apple%20Yosemite%20Release%20WK2%20%28Perf%29/builds/6396
Running Dromaeo/cssquery-jquery.html (53 of 152) crash: Dromaeo/cssquery-jquery.html FAILED Finished: 110.979434 s Running Dromaeo/cssquery-prototype.html (54 of 152) crash: Dromaeo/cssquery-prototype.html FAILED Finished: 198.212171 s Running Dromaeo/dom-attr.html (55 of 152) crash: Dromaeo/dom-attr.html FAILED Finished: 29.326325 s
Attachments
Crashlog
(69.21 KB, text/plain)
2016-10-19 14:50 PDT
,
Ryan Haddad
no flags
Details
the patch
(3.38 KB, patch)
2016-10-19 15:28 PDT
,
Filip Pizlo
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2016-10-18 21:02:04 PDT
This seems pretty urgent.
Ryan Haddad
Comment 2
2016-10-18 21:41:56 PDT
May be related to
https://trac.webkit.org/changeset/207479
?
Chris Dumez
Comment 3
2016-10-18 21:42:59 PDT
(In reply to
comment #2
)
> May be related to
https://trac.webkit.org/changeset/207479
?
Looks like the most suspicious indeed. It'd be good to see a crash trace to confirm. I tried to reproduce locally but it does not crash for me :/
Ryan Haddad
Comment 4
2016-10-19 14:50:18 PDT
Crashlogs on the bot point to
https://trac.webkit.org/changeset/207480
Thread 17 Crashed:: WTF::AutomaticThread 0 com.apple.JavaScriptCore 0x000000010a411159 0x10988c000 + 12079449 1 com.apple.JavaScriptCore 0x000000010a3f90a4 bool WTF::ConditionBase::waitForSecondsImpl<WTF::Lock>(WTF::Lock&, double) + 340 (Condition.h:74) 2 com.apple.JavaScriptCore 0x000000010a420db8 std::__1::__function::__func<WTF::AutomaticThread::start(WTF::Locker<WTF::LockBase> const&)::$_0, std::__1::allocator<WTF::AutomaticThread::start(WTF::Locker<WTF::LockBase> const&)::$_0>, void ()>::operator()() + 232 (AutomaticThread.cpp:133) 3 com.apple.JavaScriptCore 0x000000010a425f72 WTF::threadEntryPoint(void*) + 178 (Threading.cpp:61) 4 com.apple.JavaScriptCore 0x000000010a42638f WTF::wtfThreadEntryPoint(void*) + 15 (ThreadingPthreads.cpp:166) 5 libsystem_pthread.dylib 0x00007fff8b83799d _pthread_body + 131 6 libsystem_pthread.dylib 0x00007fff8b83791a _pthread_start + 168 7 libsystem_pthread.dylib 0x00007fff8b835351 thread_start + 13
Ryan Haddad
Comment 5
2016-10-19 14:50:33 PDT
Created
attachment 292114
[details]
Crashlog
Ryan Haddad
Comment 6
2016-10-19 15:02:48 PDT
Looks like that change may also be causing flaky crashes during LayoutTests:
https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK1%20(Tests)/r207566%20(699)/results.html
Filip Pizlo
Comment 7
2016-10-19 15:07:13 PDT
(In reply to
comment #6
)
> Looks like that change may also be causing flaky crashes during LayoutTests: > >
https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK1%20(Tests)/
>
r207566
%20(699)/results.html
Looking.
Filip Pizlo
Comment 8
2016-10-19 15:28:10 PDT
Created
attachment 292120
[details]
the patch
Filip Pizlo
Comment 9
2016-10-19 15:31:22 PDT
Comment on
attachment 292120
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=292120&action=review
> Source/WTF/wtf/ParkingLot.cpp:708 > - > +
Reverted.
Mark Lam
Comment 10
2016-10-19 15:54:01 PDT
Comment on
attachment 292120
[details]
the patch r=me if EWS complaints are not relevanl.
Filip Pizlo
Comment 11
2016-10-19 15:55:36 PDT
(In reply to
comment #10
)
> Comment on
attachment 292120
[details]
> the patch > > r=me if EWS complaints are not relevanl.
Thanks, I will run tests locally to be sure.
Filip Pizlo
Comment 12
2016-10-19 16:40:33 PDT
Landed in
https://trac.webkit.org/changeset/207577
. Lets hope that's it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug